@@ -10,6 +10,9 @@ CVS code -
 	- Update links for the 2.0 branch of nano. (DLR)
 	- Update for newer RPM-based distributions. (DLR, adapted from
 	  the nano 1.3.12-1.1.spec file in Fedora Rawhide)
+	- Delete the changelog section, as it hasn't been kept up to
+	  date, and all its changes are documented here in any case.
+	  (DLR)
 - doc/faq.html:
 	- Update links for the 2.0 branch of nano. (DLR)
 - doc/nano.1, doc/nanorc.5, doc/rnano.1:
